# revoice

./: .gitignore  README.md
backend/: README.md  pyproject.toml
backend/app/: api.py  main.py
backend/app/core/: config.py  database.py  exceptions.py
backend/app/engines/: applio.py  base.py  factory.py  mock.py  pitch.py  separator_client.py  video.py  waveform.py
backend/app/engines/scripts/: median_f0.py  separator_daemon.py
backend/app/features/covers/: crud.py  models.py  router.py  schemas.py  service.py
backend/app/features/separations/: crud.py  models.py  router.py  schemas.py  service.py
backend/app/features/trainings/: crud.py  models.py  router.py  schemas.py  service.py
backend/app/features/videos/: crud.py  models.py  router.py  schemas.py  service.py
backend/app/features/voices/: crud.py  models.py  router.py  schemas.py  service.py
backend/app/jobs/: cancellation.py  recovery.py  runner.py
backend/app/storage/: files.py
backend/tests/: conftest.py  test_api_flow.py  test_pitch.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  covers.ts  separations.ts  trainings.ts  types.ts  videos.ts  voices.ts
frontend/src/components/layout/: AppLayout.tsx  ThemeToggle.tsx
frontend/src/components/shared/: EmptyState.tsx  PageHeader.tsx  SongDropzone.tsx  StatusBadge.tsx  Waveform.tsx
frontend/src/components/ui/: dropdown-menu.tsx  tooltip.tsx
frontend/src/features/covers/: CoverCompactItem.tsx  queries.ts  (+7 more)
frontend/src/lib/: format.ts
(+14 files in other folders)
